[package]
name = "tiled-adapters"
version.workspace = true
edition.workspace = true

[features]
default = ["csv-adapter", "parquet", "arrow-ipc"]
csv-adapter = ["dep:csv"]
parquet = ["dep:parquet"]
arrow-ipc = []
hdf5 = ["dep:hdf5"]
tiff = ["dep:tiff", "dep:image"]
zarr = ["dep:zarrs", "dep:object_store"]

[dependencies]
tiled-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
arrow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }

# Feature-gated
csv = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }
hdf5 = { workspace = true, optional = true }
tiff = { workspace = true, optional = true }
image = { workspace = true, optional = true }
zarrs = { workspace = true, optional = true }
object_store = { workspace = true, optional = true }
