[package]
name = "tiled-auth"
version.workspace = true
edition.workspace = true

[features]
default = []
oidc = ["dep:reqwest"]
saml = []
ldap = []

[dependencies]
tiled-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
subtle = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }

# Feature-gated
reqwest = { workspace = true, optional = true }
