[package]
name = "tiled-cli"
version.workspace = true
edition.workspace = true

[dependencies]
tiled-core = { workspace = true }
tiled-server = { workspace = true }
tiled-adapters = { workspace = true }
tiled-serialization = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indexmap = { workspace = true }
bytes = { workspace = true }
axum = { workspace = true }
