[package]
name = "tiled-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
arrow = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
