[package]
name = "tiled-mongo"
version.workspace = true
edition.workspace = true

[features]
default = ["npy"]
npy = ["dep:ndarray"]
hdf5 = ["dep:hdf5"]
tiff = ["dep:tiff", "dep:image"]

[dependencies]
tiled-core = { workspace = true }
mongodb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }

# File handlers (feature-gated)
ndarray = { workspace = true, optional = true }
hdf5 = { workspace = true, optional = true }
tiff = { workspace = true, optional = true }
image = { workspace = true, optional = true }
