[package]
name = "tiled-serialization"
version.workspace = true
edition.workspace = true

[features]
default = ["json", "csv", "arrow-ipc", "msgpack"]
json = []
csv = ["dep:csv"]
arrow-ipc = []
msgpack = ["dep:rmp-serde"]
parquet = ["dep:parquet"]
image = ["dep:tiff", "dep:image"]

[dependencies]
tiled-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
arrow = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
lz4_flex = { workspace = true }

# Feature-gated
csv = { workspace = true, optional = true }
rmp-serde = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }
tiff = { workspace = true, optional = true }
image = { workspace = true, optional = true }
