[package]
name = "tiled-server"
version.workspace = true
edition.workspace = true

[dependencies]
tiled-core = { workspace = true }
tiled-adapters = { workspace = true }
tiled-serialization = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
arrow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
indexmap = { workspace = true }
tiled-core = { workspace = true }
tiled-adapters = { workspace = true }
tiled-serialization = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
bytes = { workspace = true }
